fix cards overflow

--- a/src/assets/sass/blocks/bigCard.scss
+++ b/src/assets/sass/blocks/bigCard.scss
@@ -89,6 +89,7 @@
 
     &__desc {
         padding: 10px 20px 20px;
+        overflow: hidden;
 
         &_top {
             display: flex;
